[fav excercise] added Jai Wolf

--- a/index.html
+++ b/index.html
@@ -15,22 +15,23 @@
 
     <div class="container-two">
       <h2 id="section-two"></h2>
-      <p class="section-two"></p>
+      <p class="paragraph-two"></p>
     </div>
     <div class="container-three">
       <h2 id="section-three"></h2>
-      <p class="section-three"></p>
+      <p class="paragraph-three"></p>
     </div>
 
     <div class="container-four">
-      <h2 id="section-4"></h2>
-      <p class="section-four"></p>
+      <h2 id="section-four"></h2>
+      <p class="paragraph-four"></p>
     </div>
 
     <div class="container-five">
       <h2 id="section-five"></h2>
-      <p class="section-five"></p>
+      <p class="paragraph-five"></p>
     </div>
+    <!-- append adds here to the end -->
 
     <script src="app.js"></script>
   </body>
